--- a/Arc_Ai/Arc_Ai/core/templates/core/edit_user_profile.html
+++ b/Arc_Ai/Arc_Ai/core/templates/core/edit_user_profile.html
@@ -21,7 +21,7 @@
             <div id="navigate">
                 <h1>Navigate</h1>
                 <a href="{% url 'core:home' %}" class="{% if active_page == 'home' %}active{% endif %}">Home</a>
-                <a href="{% url 'core:organization' %}" class="{% if active_page == 'organization' %}active{% endif %}">Organization</a>
+                    <a href="{% url 'core:organization' %}" class="{% if active_page == 'organization' %}active{% endif %}">Projects</a>
                 <a href="{% url 'core:saved' %}" class="{% if active_page == 'saved' %}active{% endif %}">Files</a>
             </div>
             <div id="settings">
