--- a/Arc_Ai/Arc_Ai/core/static/styles/org.css
+++ b/Arc_Ai/Arc_Ai/core/static/styles/org.css
@@ -10,8 +10,22 @@
   margin-block-start: 0.67em;
   margin-block-end: 0.67em;
 }
-
-#create_project {
+#titleProj_list {
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  justify-content: flex-start;
+  margin-bottom: 20px;
+}
+#buttonProj_select{
+  display: flex;
+  flex-direction: row;
+  justify-content: flex-start;
+  align-items: flex-start;
+  margin-left: 30px;
+  gap: 20px;
+}
+#create_project, #edit_project {
     display: flex;
     align-items: center;
     justify-content: center;
@@ -24,13 +38,12 @@
     width: 150px;
     transition: background-color 0.3s, color 0.3s;
 }
-#createalign {
+.createalign {
   display: flex;
   align-items: center;
   justify-content: flex-end;
-  margin: -60px 950px 0px 0;
 }
-#create_project:hover {
+#create_project:hover, #edit_project:hover {
     background: #353A56;
     color: #ffffff;
 }
